# Vortex2D

./: Index.py  README.md  mkdocs.yml  pyproject.toml
docs/: exceptions.md  index.md  window.md
src/ecs/: Entity.py  Manager.py
src/ecs/Components/: Color.py  Position.py  Primitives.py  Size.py  Texture.py  Transform.py  Vector.py
src/graphics/: Window.py
