[project]
name = "vortex2d"
version = "0.1.0b"
description = "2D Game Engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "glfw>=2.9.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "numpy>=2.3.1",
    "pillow>=11.3.0",
    "pymunk>=7.1.0",
    "pyopenal>=0.7.11a1",
    "pyopengl>=3.1.9",
]
